[tool.poetry]
name = "esetinspect"
version = "0.2.0"
description = ""
authors = ["Donny Maasland <donny@unauthorizedaccess.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.21.1"
attrs = "^21.3.0"
pyhumps = "^3.0.2"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.16.0"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
mypy = "^0.930"
types-attrs = "^19.1.0"
autopep8 = "^1.6.0"
black = "^21.12b0"
yapf = "^0.32.0"
bandit = "^1.7.1"
flake8 = "^4.0.1"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "humps",
    "httpx",
    "defusedxml"
]
ignore_missing_imports = true
